--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,17 +4,36 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
     defaultConfig {
-        applicationId "com.bihaika.android.asimplesudoku"
+        applicationId "com.bihaika.android.jack"
         minSdkVersion 19
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+
+    signingConfigs {
+        production {
+            storeFile file("../keystore/android_release.keystore")
+            storePassword "purpsudok_release_pass"
+            keyAlias "purpsudok_release"
+            keyPassword "purpsudok_release_pass"
+        }
+
+        debug {
+            storeFile file("../keystore/android_debug.keystore")
+            storePassword "purpsudok_debug_pass"
+            keyAlias "purpsudok_debug"
+            keyPassword "purpsudok_debug_pass"
+        }
+    }
+
+
     buildTypes {
         release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            minifyEnabled true
+            signingConfig signingConfigs.production
+            proguardFiles 'proguard-rules.pro'
         }
 
         debug {
@@ -22,6 +41,10 @@ android {
             applicationIdSuffix ".debug"
             debuggable true
         }
+    }
+    compileOptions {
+        sourceCompatibility = 1.8
+        targetCompatibility = 1.8
     }
 }
 
@@ -31,5 +54,6 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation 'com.facebook.android:facebook-android-sdk:5.15.3'
 }
